<resources>
    <string name="app_name">CommUnity</string>
    <string name="email">Email</string>
    <string name="password">Parola</string>
    <string name="login">Login</string>
    <string name="forgotPassword">Ai uitat parola?</string>
    <string name="noAccount">Nu ai cont?</string>
    <string name="account">Ai cont?</string>
    <string name="register">Register</string>
    <string name="logout">LogOut</string>
    <string name="forgotPasswordComm">ForgotPassword</string>
    <string name="sendEmail">Send email</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="publicProfile">Profil public</string>
    <string name="settings">Setări</string>
    <string name="title_activity_settings">Settings</string>
    <string name="nickname">Nume</string>
    <string name="describe">Descriere</string>
    <string name="causesName">Nume obiectiv</string>
    <string name="save">Salvează</string>
    <string name="cancel">Anulează</string>
    <string name="addCauses">Adaugă un obiectiv</string>
    <string name="find_location">Caută locația</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="marker_position">Trage de marker pentru a-i modifica poziția</string>
    <string name="objectiv_details">Informații obiectiv</string>
    <string name="mod_objectiv_details">Modifică informații obiectiv</string>
    <string name="added_objectives">Obiective\nadăugate</string>
    <string name="supported_objectives">Obiective\nsusținute</string>
    <string name="editNickname">NUME</string>
    <string name="editAge">VÂRSTA</string>
    <string name="editAddress">ADRESA</string>
    <string name="address">Adresa</string>
    <string name="added_by">adăugat de</string>
    <string name="support">Susține cauza</string>
    <string name="images">Imagini</string>
    <string name="no_support">Nu mai susțin cauza</string>
    <string name="profile_image">Imagine profil</string>
    <string name="other_images">Alte imagini (opțional)</string>
    <string name="edit">edit</string>
    <string name="privacy">Confidențialitate</string>
    <string name="hideMyCauses">• ascunde cauzele mele</string>
    <string name="hideMySupportedCauses">• ascunde cauzele susținute</string>
    <string name="hideAge">• ascunde vârsta</string>
    <string name="hideAddress">• ascunde adresa</string>
    <string name="hideMyDescription">• ascunde descrierea</string>
    <string name="changePassword">• schimbă parola</string>
    <string name="deleteAccount">• șterge contul</string>
    <string name="addUser">• adaugă user</string>
    <string name="deleteUser">• șterge user</string>
    <string name="applyNgo">• doresc să devin ONG</string>
    <string name="cancelNgo">• anulează cererea</string>
    <string name="accountDetails">Contul meu</string>
    <string name="old_password">Parola veche</string>
    <string name="new_password">Parola nouă</string>
    <string name="confirm_new_password">Confirmă noua parolă</string>
    <string name="delete">Șterge</string>
    <string name="ngo_users">Useri organizație</string>
    <string name="user_email">Email user</string>
    <string name="add">Adaugă</string>
    <string name="ngo">Organizație</string>
    <string name="apply">Aplică</string>
    <string name="myCauses">Cauzele mele</string>
    <string name="ngoCauses">Cauzele organizației</string>
    <string name="supported_causes">Cauzele susținute</string>
    <string name="all_causes">Toate cauzele</string>
    <string name="members">Membri</string>
    <string name="proposals">Propuneri</string>
    <string name="no_my_causes">Nu există niciun obiectiv\nadăugat de dumneavoastră</string>
    <string name="no_supported_causes">Nu există niciun obiectiv\nsusținut de dumneavoastră</string>
    <string name="no_member_of">Nu ești membru\nîn niciun ONG</string>
    <string name="no_member">Niciun membru în acest ONG</string>
    <string name="no_supporter_of">Nu susții niciun ONG</string>
    <string name="no_supporter">Niciun susținător\nal acestui ONG</string>
    <string name="no_request_of">Nu ai aplicat\ncătre niciun ONG</string>
    <string name="no_ngo">Momentan nu activează\nniciun ONG în aplicație</string>
    <string name="no_causes">Nu există cauze adăugate</string>
    <string name="ngo_title">ONG-uri</string>
    <string name="ngo_details_title">Detalii ONG</string>
    <string name="member">Membru</string>
    <string name="supported">Susținute</string>
    <string name="supporters">Susținători</string>
    <string name="requests">Cereri</string>
    <string name="all">Toate</string>
    <string name="proposals_made">Făcute</string>
    <string name="proposals_received">Primite</string>
    <string name="processing">În curs de procesare</string>
    <string name="rejected">Refuzate</string>
    <string name="no_rejected_proposals">Nu aveți propuneri refuzate</string>
    <string name="no_processing_proposals">Nu aveți propuneri în curs de procesare</string>
    <string name="no_processing_to_accept">Nu aveți propuneri\npe care să le aprobați</string>
    <string name="add_to_ngo">Vreau să fac\nparte din acest ONG</string>
    <string name="accept_ngo">Acceptă solicitarea\nși devino membru</string>
    <string name="reject_user">Ați refuzat acest\nuser în trecut.\nAnulează acestă decizie</string>
    <string name="remove_proposal_to_ngo">Anulează solicitarea\nfăcută acestui ONG</string>
    <string name="rejected_proposal_from_ngo">ONG-ul a refuzat\nsolicitarea formulată anterior</string>
    <string name="remove_from_ngo">Nu mai vreau să fac\nparte din acest ONG</string>
    <string name="add_user_in_ngo">Adaugă user-ul în ONG</string>
    <string name="accept_user">Acceptă solicitarea\nde a deveni membru</string>
    <string name="reject">Refuză solicitarea\nde a deveni membru</string>
    <string name="reject_ngo">Ați refuzat acest\nONG în trecut.\nAnulează acestă decizie</string>
    <string name="remove_proposal_to_user">Anulează solicitarea\nfăcută acestui user</string>
    <string name="rejected_proposal_from_user">User-ul a refuzat\nsolicitarea formulată anterior</string>
    <string name="remove_user_from_ngo">Șterge user-ul din ONG</string>
    <string name="yes">Da</string>
    <string name="no">Nu</string>
    <string name="support_NGO">Susține\nacest ONG</string>
    <string name="no_support_NGO">Nu susțin\nacest ONG</string>
    <string name="out">Ești sigur că vrei\nsă ieși din aplicație?</string>
    <string name="cancel_changes">Ești sigur că vrei\nsă anulezi toate schimbările?</string>
    <string name="confirm_decision">Ești sigur că vrei\nsă devină ONG utilizatorul\n</string>
    <string name="deleteCause">Șterge obiectivul</string>
    <string name="are_you_sure_delete_cause">Ești sigur\n că vrei să ștergi\nacest obiectiv?</string>
    <string name="accept">Acceptă</string>
    <string name="send">Trimite email</string>
    <string name="changeDecision">Schimbă decizia</string>
    <string name="official_address">Adresa oficială</string>
    <string name="site">Website</string>
    <string name="donate">Link donează 2%</string>
    <string name="download_data">Descarcă lista de susținători</string>
    <!--<string name="thanks">Mulțumim!</string>-->

</resources>
