<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue5"
    android:weightSum="10">

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="38sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/app_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="80dp"
        android:textSize="16sp"
        android:textColor="@color/blue2"
        android:textStyle="bold"
        android:text="@string/forgotPasswordComm"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1.3"/>

    <EditText
        android:id="@+id/email_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="38dp"
        android:layout_marginRight="38dp"
        android:background="@drawable/edittext_login_form"
        android:fontFamily="sans-serif"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/blue2"
        android:textCursorDrawable="@null" />


    <Button
        android:id="@+id/sendEmail_id"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:textColor="@color/white"
        android:background="@drawable/button_login_form"
        android:text="@string/sendEmail"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="3.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue2"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/account"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/login_activity_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="@string/login"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue2"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/noAccount"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/singUp_activity_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColor="@color/white"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:text="@string/register"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
