<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.community.community.GMaps.FragmentSubmit">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue5">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
             android:layout_marginTop="15dp">

            <Button
                android:id="@+id/save_marker"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="32dp"
                android:textColor="@color/white"
                android:background="@drawable/edittext_login_form_green"
                android:text="@string/save"/>

             <Button
                 android:id="@+id/cancel_marker"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="32dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginRight="32dp"
                 android:textColor="@color/white"
                 android:background="@drawable/edittext_login_form_red"
                 android:text="@string/cancel"/>
         </LinearLayout>

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:gravity="center"
             android:text="@string/marker_position"/>

    </LinearLayout>

</FrameLayout>
