<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.community.community.GMaps.SubmitCauseActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue5">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        app:layout_heightPercent="12%"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:text="@string/proposals"
        android:textStyle="bold"/>

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/receivedLayout"
        android:layout_below="@id/textView"
        app:layout_heightPercent="7%"
        app:layout_widthPercent="40%"
        app:layout_marginLeftPercent="5%"
        app:layout_marginBottomPercent="4%">

        <Button
            android:id="@+id/membersBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue1"
            android:textColor="@color/white"
            android:text="@string/proposals_received"
            />
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/supporterLayout"
        android:layout_below="@id/textView"
        app:layout_heightPercent="7%"
        app:layout_widthPercent="40%"
        app:layout_marginLeftPercent="55%"
        app:layout_marginBottomPercent="4%">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/supporterBtn"
            android:background="@color/blue4"
            android:textColor="@color/white"
            android:text="@string/proposals_made"
            />
    </android.support.percent.PercentRelativeLayout>



    <ScrollView
        android:id="@+id/scroll_view_processing"
        android:layout_below="@id/supporterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        >


        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/processing"
                    android:textColor="@color/blue2"
                    android:textSize="16sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blue2"/>
            </LinearLayout>

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/root_processing_layout"
                android:layout_below="@id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >
            </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/no_processing_layout"
                android:layout_below="@id/linearLayout1"
                app:layout_heightPercent="20%"
                app:layout_widthPercent="100%"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/no_processing_proposals"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </android.support.percent.PercentRelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_below="@id/no_processing_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rejected"
                    android:textColor="@color/blue2"
                    android:textSize="16sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/blue2"/>
            </LinearLayout>

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/root_rejected_layout"
                android:layout_below="@id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                >
            </android.support.percent.PercentRelativeLayout>

            <android.support.percent.PercentRelativeLayout
                android:id="@+id/no_rejected_layout"
                android:layout_below="@id/linearLayout2"
                app:layout_heightPercent="20%"
                app:layout_widthPercent="100%"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/no_rejected_proposals"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </android.support.percent.PercentRelativeLayout>

        </android.support.percent.PercentRelativeLayout>
    </ScrollView>

</android.support.percent.PercentRelativeLayout>